Bug 835767: AsyncConnectionHelper::ConvertCloneReadInfosToArray callers don't need to clear structured clone buffers. r=bent